attempt to unbold fonts

--- a/templates/email.html
+++ b/templates/email.html
@@ -4,27 +4,27 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <title>A spot has opened up in a class!</title>
         <!--[if !mso]><!-- -->
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
+        <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
         <!--<![endif]-->
         <style type="text/css">
 			/* /\/\/\/\/\/\/\/\/ CLIENT-SPECIFIC STYLES /\/\/\/\/\/\/\/\/ */
-			#outlook a{padding: 0;} /* Force Outlook to provide a "view in browser" message */
-			.ReadMsgBody{width: 100%;} .ExternalClass{width: 100%;} /* Force Hotmail to display emails at full width */
+			#outlook a {padding: 0;} /* Force Outlook to provide a "view in browser" message */
+			.ReadMsgBody {width: 100%;} .ExternalClass{width: 100%;} /* Force Hotmail to display emails at full width */
 			.ExternalClass, .ExternalClass p, .ExternalClass span, .ExternalClass font, .ExternalClass td, .ExternalClass div {line-height: 100%;} /* Force Hotmail to display normal line spacing */
-			body, table, td, p, a, li, blockquote{-webkit-text-size-adjust: 100%; -ms-text-size-adjust: 100%;} /* Prevent WebKit and Windows mobile changing default text sizes */
-			table, td{mso-table-lspace: 0pt; mso-table-rspace: 0pt;} /* Remove spacing between tables in Outlook 2007 and up */
-			img{-ms-interpolation-mode: bicubic;} /* Allow smoother rendering of resized image in Internet Explorer */
+			body, table, td, p, a, li, blockquote {-webkit-text-size-adjust: 100%; -ms-text-size-adjust: 100%;} /* Prevent WebKit and Windows mobile changing default text sizes */
+			table, td {mso-table-lspace: 0pt; mso-table-rspace: 0pt;} /* Remove spacing between tables in Outlook 2007 and up */
+			img {-ms-interpolation-mode: bicubic;} /* Allow smoother rendering of resized image in Internet Explorer */
 			/* /\/\/\/\/\/\/\/\/ RESET STYLES /\/\/\/\/\/\/\/\/ */
-			body{margin: 0; padding: 0;}
-			img{border: 0; height: auto; line-height: 100%; outline: none; text-decoration: none;}
-			table{border-collapse: collapse !important;}
-			body, #bodyTable, #bodyCell{height: 100% !important; margin: 0; padding: 0; width: 100% !important;}
+			body {margin: 0; padding: 0;}
+			img {border: 0; height: auto; line-height: 100%; outline: none; text-decoration: none;}
+			table {border-collapse: collapse !important;}
+			body, #bodyTable, #bodyCell {height: 100% !important; margin: 0; padding: 0; width: 100% !important;}
 			/* /\/\/\/\/\/\/\/\/ TEMPLATE STYLES /\/\/\/\/\/\/\/\/ */
 			/* ========== Page Styles ========== */
-			body, #bodyTable{
+			body, #bodyTable {
 				background-color: #e9eaed;
 			}
-			h1{
+			h1 {
 				color: #214433 !important;
 				display: block;
 				font-family: 'Montserrat', sans-serif;
@@ -40,7 +40,7 @@
 				text-align: center;
 			}
 
-			caption{
+			caption {
 				color: #a9a9a9 !important;
 				font-family: 'Montserrat', sans-serif;
 				font-size: 16px;
@@ -55,12 +55,12 @@
 				text-align: left;
 			}
 			/* ========== Header Styles ========== */
-			#templateHeader{
+			#templateHeader {
                 height: 80px;
 				background-color: #7ac18a;
 				border-bottom: 7px solid #38a370;
 			}
-			.headerContent{
+			.headerContent {
 				color: #214433;
 				font-family: 'Montserrat', sans-serif;
 				font-size: 20px;
@@ -117,26 +117,14 @@
             .classTable td.class-location {
                 width: 30%;
             }
-			/* ========== Footer Styles ========== */
-			.footerContent {
-				color: #a9a9a9;
-				font-family: 'Montserrat', sans-serif;
-				font-size: 16px;
-				line-height: 150%;
-				padding-top: 20px;
-				padding-right: 20px;
-				padding-bottom: 20px;
-				padding-left: 20px;
-				text-align: center;
-			}
 			/* /\/\/\/\/\/\/\/\/ MOBILE STYLES /\/\/\/\/\/\/\/\/ */
-            @media only screen and (max-width: 480px){
+            @media only screen and (max-width: 480px) {
 				/* /\/\/\/\/\/\/ CLIENT-SPECIFIC MOBILE STYLES /\/\/\/\/\/\/ */
-				body, table, td, p, a, li, blockquote{-webkit-text-size-adjust: none !important;} /* Prevent Webkit platforms from changing default text sizes */
-                body{width: 100% !important; min-width: 100% !important;} /* Prevent iOS Mail from adding padding to the body */
+				body, table, td, p, a, li, blockquote {-webkit-text-size-adjust: none !important;} /* Prevent Webkit platforms from changing default text sizes */
+                body {width: 100% !important; min-width: 100% !important;} /* Prevent iOS Mail from adding padding to the body */
 				/* /\/\/\/\/\/\/ MOBILE TEMPLATE STYLES /\/\/\/\/\/\/ */
 				/* ======== Body Styles ======== */
-				.bodyContent{
+				.bodyContent {
 					font-size: 18px !important;
 					line-height: 125% !important;
 				}
@@ -253,14 +241,6 @@
                                             </td>
                                         </tr>
                                     </table>
-                                </td>
-                            </tr>
-                        </table>
-                        <!-- FOOTER TABLE -->
-                        <table border="0" cellpadding="0" cellspacing="0" width="100%" id="templateFooter" style="-webkit-text-size-adjust: 100%;-ms-text-size-adjust: 100%;mso-table-lspace: 0pt;mso-table-rspace: 0pt;border-collapse: collapse !important;">
-                            <tr>
-                                <td valign="top" class="footerContent" style="padding-top: 20px;-webkit-text-size-adjust: 100%;-ms-text-size-adjust: 100%;mso-table-lspace: 0pt;mso-table-rspace: 0pt;color: #a9a9a9;font-family: 'Montserrat', sans-serif;font-size: 16px;line-height: 150%;padding-right: 20px;padding-bottom: 20px;padding-left: 20px;text-align: center;">
-                                	<p style="-webkit-text-size-adjust: 100%;-ms-text-size-adjust: 100%;">Made By a Dome</p>
                                 </td>
                             </tr>
                         </table>
