added text box to email

--- a/templates/email_with_style_tag.html
+++ b/templates/email_with_style_tag.html
@@ -4,7 +4,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         <title>A spot has opened up in a class!</title>
         <!--[if !mso]><!-- -->
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
+        <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
         <!--<![endif]-->
         <style type="text/css">
 			/* /\/\/\/\/\/\/\/\/ CLIENT-SPECIFIC STYLES /\/\/\/\/\/\/\/\/ */
@@ -85,6 +85,19 @@
 				padding-left: 0px;
 				text-align: left;
 			}
+            /* ========== Text Table Styles ========== */
+            .textTable {
+                margin-top: 20px;
+            }
+            .textTable td {
+                background-color: #ffffff;
+                padding-top: 15px;
+                padding-bottom: 15px;
+                padding-left: 15px;
+                padding-right: 15px;
+                border: 1px solid #dbdee4;
+                text-align: left;
+            }
             /* ========== Class Table Styles ========== */
             .classTable {
                 margin-top: 20px;
@@ -175,6 +188,13 @@
                         <table border="0" cellpadding="0" cellspacing="0" width="85%" id="templateBody">
                             <tr>
                                 <td valign="top" class="bodyContent">
+                                    <table border="0" cellpadding="0" cellspacing="0" width="100%" class="textTable">
+                                        <tr style="background-color: #85ce95;">
+                                            <td valign="top">
+                                                These classes now have a space for you to enrol.
+                                            </td>
+                                        </tr>
+                                    </table>
                                     <table border="0" cellpadding="0" cellspacing="0" width="100%" class="classTable">
                                         <caption>
                                             CHEM6702
