--- a/templates/email_with_style_tag.html
+++ b/templates/email_with_style_tag.html
@@ -2,6 +2,7 @@
 <html lang="en">
 	<head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+        <meta name="viewport" content="width=device-width,initial-scale=1.0">
         <title>A spot has opened up in a class!</title>
         <!--[if !mso]><!-- -->
         <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
