--- a/templates/email.html
+++ b/templates/email.html
@@ -198,84 +198,36 @@
                                             </td>
                                         </tr>
                                     </table>
-                                    <table border="0" cellpadding="0" cellspacing="0" width="100%" class="classTable" style="-webkit-text-size-adjust: 100%;-ms-text-size-adjust: 100%;mso-table-lspace: 0pt;mso-table-rspace: 0pt;margin-top: 20px;border-collapse: collapse !important;">
-                                        <caption style="font-family: 'Montserrat', sans-serif;font-size: 14px;font-style: normal;font-weight: normal;line-height: 100%;letter-spacing: normal;margin-top: 0;margin-right: 0;margin-bottom: 0;margin-left: 10px;text-align: left;color: #a9a9a9 !important;">
-                                            CHEM6702
-                                        </caption>
-                                        <tr style="background-color: #85ce95;">
-                                            <td valign="top" class="class-type" style="-webkit-text-size-adjust: 100%;-ms-text-size-adjust: 100%;mso-table-lspace: 0pt;mso-table-rspace: 0pt;font-family: 'Montserrat', sans-serif;font-size: 14px;padding-top: 15px;padding-bottom: 15px;border: 1px solid #dbdee4;text-align: center;width: 15%;">
-                                                LAB
-                                            </td>
-                                            <td valign="top" class="class-time" style="-webkit-text-size-adjust: 100%;-ms-text-size-adjust: 100%;mso-table-lspace: 0pt;mso-table-rspace: 0pt;font-family: 'Montserrat', sans-serif;font-size: 14px;padding-top: 15px;padding-bottom: 15px;border: 1px solid #dbdee4;text-align: center;width: 30%;">
-                                                Thu 15-18
-                                            </td>
-                                            <td valign="top" class="class-location" style="-webkit-text-size-adjust: 100%;-ms-text-size-adjust: 100%;mso-table-lspace: 0pt;mso-table-rspace: 0pt;font-family: 'Montserrat', sans-serif;font-size: 14px;padding-top: 15px;padding-bottom: 15px;border: 1px solid #dbdee4;text-align: center;width: 30%;">
-                                                See School
-                                            </td>
-                                            <td valign="top" class="class-status" style="-webkit-text-size-adjust: 100%;-ms-text-size-adjust: 100%;mso-table-lspace: 0pt;mso-table-rspace: 0pt;font-family: 'Montserrat', sans-serif;font-size: 14px;padding-top: 15px;padding-bottom: 15px;border: 1px solid #dbdee4;text-align: center;width: 15%;">
-                                                Open
-                                            </td>
-                                            <td valign="top" class="class-enrolled" style="-webkit-text-size-adjust: 100%;-ms-text-size-adjust: 100%;mso-table-lspace: 0pt;mso-table-rspace: 0pt;font-family: 'Montserrat', sans-serif;font-size: 14px;padding-top: 15px;padding-bottom: 15px;border: 1px solid #dbdee4;text-align: center;width: 20%;">
-                                                3/5
-                                            </td>
-                                        </tr>
-                                        <tr style="background-color: #85ce95;">
-                                            <td valign="top" class="class-type" style="-webkit-text-size-adjust: 100%;-ms-text-size-adjust: 100%;mso-table-lspace: 0pt;mso-table-rspace: 0pt;font-family: 'Montserrat', sans-serif;font-size: 14px;padding-top: 15px;padding-bottom: 15px;border: 1px solid #dbdee4;text-align: center;width: 15%;">
-                                                LAB
-                                            </td>
-                                            <td valign="top" class="class-time" style="-webkit-text-size-adjust: 100%;-ms-text-size-adjust: 100%;mso-table-lspace: 0pt;mso-table-rspace: 0pt;font-family: 'Montserrat', sans-serif;font-size: 14px;padding-top: 15px;padding-bottom: 15px;border: 1px solid #dbdee4;text-align: center;width: 30%;">
-                                                Thu 15-18
-                                            </td>
-                                            <td valign="top" class="class-location" style="-webkit-text-size-adjust: 100%;-ms-text-size-adjust: 100%;mso-table-lspace: 0pt;mso-table-rspace: 0pt;font-family: 'Montserrat', sans-serif;font-size: 14px;padding-top: 15px;padding-bottom: 15px;border: 1px solid #dbdee4;text-align: center;width: 30%;">
-                                                See School
-                                            </td>
-                                            <td valign="top" class="class-status" style="-webkit-text-size-adjust: 100%;-ms-text-size-adjust: 100%;mso-table-lspace: 0pt;mso-table-rspace: 0pt;font-family: 'Montserrat', sans-serif;font-size: 14px;padding-top: 15px;padding-bottom: 15px;border: 1px solid #dbdee4;text-align: center;width: 15%;">
-                                                Open
-                                            </td>
-                                            <td valign="top" class="class-enrolled" style="-webkit-text-size-adjust: 100%;-ms-text-size-adjust: 100%;mso-table-lspace: 0pt;mso-table-rspace: 0pt;font-family: 'Montserrat', sans-serif;font-size: 14px;padding-top: 15px;padding-bottom: 15px;border: 1px solid #dbdee4;text-align: center;width: 20%;">
-                                                3/5
-                                            </td>
-                                        </tr>
-                                    </table>
-                                    <table border="0" cellpadding="0" cellspacing="0" width="100%" class="classTable" style="-webkit-text-size-adjust: 100%;-ms-text-size-adjust: 100%;mso-table-lspace: 0pt;mso-table-rspace: 0pt;margin-top: 20px;border-collapse: collapse !important;">
-                                        <caption style="font-family: 'Montserrat', sans-serif;font-size: 14px;font-style: normal;font-weight: normal;line-height: 100%;letter-spacing: normal;margin-top: 0;margin-right: 0;margin-bottom: 0;margin-left: 10px;text-align: left;color: #a9a9a9 !important;">
-                                            MECH9650
-                                        </caption>
-                                        <tr style="background-color: #85ce95;">
-                                            <td valign="top" class="class-type" style="-webkit-text-size-adjust: 100%;-ms-text-size-adjust: 100%;mso-table-lspace: 0pt;mso-table-rspace: 0pt;font-family: 'Montserrat', sans-serif;font-size: 14px;padding-top: 15px;padding-bottom: 15px;border: 1px solid #dbdee4;text-align: center;width: 15%;">
-                                                LAB
-                                            </td>
-                                            <td valign="top" class="class-time" style="-webkit-text-size-adjust: 100%;-ms-text-size-adjust: 100%;mso-table-lspace: 0pt;mso-table-rspace: 0pt;font-family: 'Montserrat', sans-serif;font-size: 14px;padding-top: 15px;padding-bottom: 15px;border: 1px solid #dbdee4;text-align: center;width: 30%;">
-                                                Thu 15-18
-                                            </td>
-                                            <td valign="top" class="class-location" style="-webkit-text-size-adjust: 100%;-ms-text-size-adjust: 100%;mso-table-lspace: 0pt;mso-table-rspace: 0pt;font-family: 'Montserrat', sans-serif;font-size: 14px;padding-top: 15px;padding-bottom: 15px;border: 1px solid #dbdee4;text-align: center;width: 30%;">
-                                                See School
-                                            </td>
-                                            <td valign="top" class="class-status" style="-webkit-text-size-adjust: 100%;-ms-text-size-adjust: 100%;mso-table-lspace: 0pt;mso-table-rspace: 0pt;font-family: 'Montserrat', sans-serif;font-size: 14px;padding-top: 15px;padding-bottom: 15px;border: 1px solid #dbdee4;text-align: center;width: 15%;">
-                                                Open
-                                            </td>
-                                            <td valign="top" class="class-enrolled" style="-webkit-text-size-adjust: 100%;-ms-text-size-adjust: 100%;mso-table-lspace: 0pt;mso-table-rspace: 0pt;font-family: 'Montserrat', sans-serif;font-size: 14px;padding-top: 15px;padding-bottom: 15px;border: 1px solid #dbdee4;text-align: center;width: 20%;">
-                                                3/5
-                                            </td>
-                                        </tr>
-                                        <tr style="background-color: #85ce95;">
-                                            <td valign="top" class="class-type" style="-webkit-text-size-adjust: 100%;-ms-text-size-adjust: 100%;mso-table-lspace: 0pt;mso-table-rspace: 0pt;font-family: 'Montserrat', sans-serif;font-size: 14px;padding-top: 15px;padding-bottom: 15px;border: 1px solid #dbdee4;text-align: center;width: 15%;">
-                                                LAB
-                                            </td>
-                                            <td valign="top" class="class-time" style="-webkit-text-size-adjust: 100%;-ms-text-size-adjust: 100%;mso-table-lspace: 0pt;mso-table-rspace: 0pt;font-family: 'Montserrat', sans-serif;font-size: 14px;padding-top: 15px;padding-bottom: 15px;border: 1px solid #dbdee4;text-align: center;width: 30%;">
-                                                Thu 15-18
-                                            </td>
-                                            <td valign="top" class="class-location" style="-webkit-text-size-adjust: 100%;-ms-text-size-adjust: 100%;mso-table-lspace: 0pt;mso-table-rspace: 0pt;font-family: 'Montserrat', sans-serif;font-size: 14px;padding-top: 15px;padding-bottom: 15px;border: 1px solid #dbdee4;text-align: center;width: 30%;">
-                                                See School
-                                            </td>
-                                            <td valign="top" class="class-status" style="-webkit-text-size-adjust: 100%;-ms-text-size-adjust: 100%;mso-table-lspace: 0pt;mso-table-rspace: 0pt;font-family: 'Montserrat', sans-serif;font-size: 14px;padding-top: 15px;padding-bottom: 15px;border: 1px solid #dbdee4;text-align: center;width: 15%;">
-                                                Open
-                                            </td>
-                                            <td valign="top" class="class-enrolled" style="-webkit-text-size-adjust: 100%;-ms-text-size-adjust: 100%;mso-table-lspace: 0pt;mso-table-rspace: 0pt;font-family: 'Montserrat', sans-serif;font-size: 14px;padding-top: 15px;padding-bottom: 15px;border: 1px solid #dbdee4;text-align: center;width: 20%;">
-                                                3/5
-                                            </td>
-                                        </tr>
-                                    </table>
+                                    {% for course in courses %}
+                                        <table border="0" cellpadding="0" cellspacing="0" width="100%" class="classTable" style="-webkit-text-size-adjust: 100%;-ms-text-size-adjust: 100%;mso-table-lspace: 0pt;mso-table-rspace: 0pt;margin-top: 20px;border-collapse: collapse !important;">
+                                            <caption style="font-family: 'Montserrat', sans-serif;font-size: 14px;font-style: normal;font-weight: normal;line-height: 100%;letter-spacing: normal;margin-top: 0;margin-right: 0;margin-bottom: 0;margin-left: 10px;text-align: left;color: #a9a9a9 !important;">
+                                                {{ course.course_id }}
+                                            </caption>
+                                            {% for class in course.classes %}
+                                                <tr style="background-color: {{ loop.cycle('#7ac18a', '#85ce95') }};">
+                                                    <td valign="top" class="class-type" style="-webkit-text-size-adjust: 100%;-ms-text-size-adjust: 100%;mso-table-lspace: 0pt;mso-table-rspace: 0pt;font-family: 'Montserrat', sans-serif;font-size: 14px;padding-top: 15px;padding-bottom: 15px;border: 1px solid #dbdee4;text-align: center;width: 15%;">
+                                                        {{ class.type }}
+                                                    </td>
+                                                    <td valign="top" class="class-time" style="-webkit-text-size-adjust: 100%;-ms-text-size-adjust: 100%;mso-table-lspace: 0pt;mso-table-rspace: 0pt;font-family: 'Montserrat', sans-serif;font-size: 14px;padding-top: 15px;padding-bottom: 15px;border: 1px solid #dbdee4;text-align: center;width: 30%;">
+                                                        {% if class.day and class.start_time and class.end_time %}
+                                                            {{ class.day }} {{ class.start_time }}-{{ class.end_time }}
+                                                        {% endif %}
+                                                    </td>
+                                                    <td valign="top" class="class-location" style="-webkit-text-size-adjust: 100%;-ms-text-size-adjust: 100%;mso-table-lspace: 0pt;mso-table-rspace: 0pt;font-family: 'Montserrat', sans-serif;font-size: 14px;padding-top: 15px;padding-bottom: 15px;border: 1px solid #dbdee4;text-align: center;width: 30%;">
+                                                        {% if class.location %}
+                                                            {{ class.location }}
+                                                        {% endif %}
+                                                    </td>
+                                                    <td valign="top" class="class-status" style="-webkit-text-size-adjust: 100%;-ms-text-size-adjust: 100%;mso-table-lspace: 0pt;mso-table-rspace: 0pt;font-family: 'Montserrat', sans-serif;font-size: 14px;padding-top: 15px;padding-bottom: 15px;border: 1px solid #dbdee4;text-align: center;width: 15%;">
+                                                        {{ class.status }}
+                                                    </td>
+                                                    <td valign="top" class="class-enrolled" style="-webkit-text-size-adjust: 100%;-ms-text-size-adjust: 100%;mso-table-lspace: 0pt;mso-table-rspace: 0pt;font-family: 'Montserrat', sans-serif;font-size: 14px;padding-top: 15px;padding-bottom: 15px;border: 1px solid #dbdee4;text-align: center;width: 20%;">
+                                                        {{ class.enrolled }}/{{ class.capacity }}
+                                                    </td>
+                                                </tr>
+                                            {% endfor %}
+                                        </table>
+                                    {% endfor %}
                                 </td>
                             </tr>
                         </table>
