search bar now has a delay before doing an ajax and responds to arrow keys/enter

--- a/css/tutorifull.scss
+++ b/css/tutorifull.scss
@@ -179,7 +179,8 @@ caption {
     border-bottom-right-radius: 20px;
     border-bottom: 1px solid $box-border-color;
 }
-.course-search-result:hover {
+.course-search-result:hover,
+.course-search-result.selected {
     background-color: $light-green;
 }
 
