--- a/templates/success.html
+++ b/templates/success.html
@@ -14,7 +14,7 @@
                 {{ course.course_id }}
             </caption>
             {% for class in course.classes %}
-                <tr class="row selected">
+                <tr class="selected">
                     <td class="class-type" data-type="{{ class.type }}">
                         {{ class.type }}
                     </td>
